Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#149 closed bug (fixed)

input_server doesn't properly set typemativ repeat and delay

Reported by: marcusoverhagen Owned by: marcusoverhagen
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

On the first start on a freshly initialized partition, input server uses valid values:

KERN: ps2: KB_SET_KEY_REPEAT_RATE 250000 KERN: ps2: KB_SET_KEY_REPEAT_DELAY 200

changing them with Keyboard preferences works and also sets valid values.

After a clean shutdown and restart, input_server sets values like this:

KERN: ps2: KB_SET_KEY_REPEAT_RATE -2115663531 KERN: ps2: KB_SET_KEY_REPEAT_DELAY -326541474

Change History (4)

comment:1 by marcusoverhagen, 19 years ago

Owner: changed from korli@… to marcusoverhagen

comment:2 by marcusoverhagen, 19 years ago

Resolution: fixed

comment:3 by marcusoverhagen, 19 years ago

fixed in hrev16380. Input server now saves keyboard typematic settings whenever they are modified, instead of wating until it is shutdown (which never happens, either the system will crash, or the input_server will stay active after a normal shut down)

comment:4 by marcusoverhagen, 19 years ago

Status: newclosed
Note: See TracTickets for help on using tickets.