This fixes bug #149. Input server now saves keyboard typematic settings whenever they are modified, instead of wating until it is shutdown (which never happens, either the system will crash, or the input_server will stay active after a normal shut down) Same problems might apply to mouse and keymap settings. Input server shutdown handling should be reviewed.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16380 a95241bf-73f2-0310-859d-f6bbb57e9c96