src/servers/input/KeyboardSettings.h
@@ -1,9 +1,11 @@
 /*
-** Copyright 2004, the Haiku project. All rights reserved.
+** Copyright 2004-2006, the Haiku project. All rights reserved.
 ** Distributed under the terms of the Haiku License.
 **
-** Author : Jérôme Duval
-** Original authors: mccall@digitalparadise.co.uk
+** Authors in chronological order:
+**  mccall@digitalparadise.co.uk
+**  Jérôme Duval
+**  Marcus Overhagen
 */
 
 #ifndef KEYBOARD_SETTINGS_H_
@@ -12,19 +14,22 @@
 #include <SupportDefs.h>
 #include <kb_mouse_settings.h>
 
-class KeyboardSettings {
+class KeyboardSettings 
+{
 public :
-	KeyboardSettings();
-	~KeyboardSettings();
+				KeyboardSettings();
+				~KeyboardSettings();
+
+	void		SetKeyboardRepeatRate(int32 rate);
+	void		SetKeyboardRepeatDelay(bigtime_t delay);
 	
-	int32 KeyboardRepeatRate() const { return fSettings.key_repeat_rate; }
-	void SetKeyboardRepeatRate(int32 rate);
-	int32 KeyboardRepeatDelay() const { return fSettings.key_repeat_delay; }
-	void SetKeyboardRepeatDelay(int32 rate);
+	int32		KeyboardRepeatRate() const		{ return fSettings.key_repeat_rate; }
+	bigtime_t	KeyboardRepeatDelay() const 	{ return fSettings.key_repeat_delay; }
+
+private:	
+	void Save();
 	
 private:
-	static const char 	kKeyboardSettingsFile[];
-	BPoint				fCorner;
 	kb_settings			fSettings;
 };
 
